force-app/main/default/objects/PriceList__c/PriceList__c.object-meta.xml
<CustomObject>
    <label>Price List</label>
    <nameField>
        <label>Price List Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Price Lists</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>