force-app/main/default/objects/PriceList__c/fields/Brand__c.field-meta.xml
<CustomField>
    <fullName>Brand__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Brand</label>
    <referenceTo>Brand__c</referenceTo>
    <relationshipLabel>Price Lists</relationshipLabel>
    <relationshipName>PriceLists</relationshipName>
    <type>Lookup</type>
</CustomField>