force-app/main/default/objects/PriceList__c/fields/Country__c.field-meta.xml
<CustomField>
    <fullName>Country__c</fullName>
    <label>Country</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value><fullName>GB</fullName><default>false</default><label>GB</label></value>
            <value><fullName>IE</fullName><default>false</default><label>IE</label></value>
            <value><fullName>ZA</fullName><default>false</default><label>ZA</label></value>
            <value><fullName>CA</fullName><default>false</default><label>CA</label></value>
        </valueSetDefinition>
    </valueSet>
</CustomField>