force-app/main/default/objects/PriceList__c/fields/Customer__c.field-meta.xml
<CustomField>
    <fullName>Customer__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Customer</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Price Lists (Customer)</relationshipLabel>
    <relationshipName>PriceListsCustomer</relationshipName>
    <type>Lookup</type>
</CustomField>