force-app/main/default/objects/PriceList__c/fields/OEM__c.field-meta.xml
<CustomField>
    <fullName>OEM__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>OEM</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Price Lists (OEM)</relationshipLabel>
    <relationshipName>PriceListsOEM</relationshipName>
    <type>Lookup</type>
</CustomField>